# tokencostscope

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SKILL.md  pyproject.toml  server.json  smithery.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
commands/: tokencast-version.md  tokencostscope-version.md
docs/: architecture-v1.7-v2.0.md  architecture.md  attribution-protocol.md  enterprise-strategy-adversarial-report.md  enterprise-strategy-review-questions.md  enterprise-strategy-v2.md  enterprise-strategy.md  gotchas.md  phase-1-execution-plan.md  phase-1-pm-review.md  phase-1b-mcp-stories.md  phase-1c-attribution-stories.md  plan-v1.7-v2.0-final.md  plan-v1.7-v2.0-initial.md  requirements-v1.7-v2.0.md
plugin/: .mcp.json
references/: calibration-algorithm.md  examples.md  heuristics.md  pricing.md  test3-success-criteria.md
scripts/: calibration_store.py  disable.sh  install-hooks.sh  parse_last_estimate.py  sum-session-tokens.py  tokencast-agent-hook.sh  tokencast-learn.sh  tokencast-midcheck.sh  tokencast-track.sh  tokencostscope-agent-hook.sh  tokencostscope-learn.sh  tokencostscope-midcheck.sh  tokencostscope-status.py  tokencostscope-track.sh  update-factors.py
tests/: conftest.py  test_agent_hook.py  test_cache_write_modeling.py  test_calibration_convergence.py  test_calibration_status_tool.py  test_calibration_store.py  test_continuation_session.py  test_cost_history_tool.py  test_data_modules_drift.py  test_decay_weighting.py  test_disable_telemetry_tool.py  test_e2e_non_claude_code.py  test_estimate_cost_tool.py  test_estimate_step_resolution.py  (+28 more)
(+85 files in other folders)
